# MASA-firmware-libraries

./: .gitignore  README.md  README.md.txt  hashcode.py
L6470/: README.md
L6470/dspin/: readme.txt
L6470/inc/: L6470.h
L6470/src/: L6470.c
M95M01_R/: README.md
M95M01_R/inc/: M95M01_R.h
M95M01_R/src/: M95M01_R.c
MAX11128/: README.md
MAX11128/inc/: MAX11128.h
MAX11128/src/: MAX11128.c
MAX11131/: MAX11131.c  MAX11131.h  README.md  adc.c  adc.h
MAX31856/: README.md
MS5607/: MS5607_test.m  README.md  ms5607-int-type-test.py
MS5607_pressure_altimeter/: ms5607.c  ms5607.h  ms5607_pressure_altitude.c
SerialComms/: CMakeLists.txt  Makefile  README.md
SerialComms/gui/: _S2_InterfaceAutogen.py  _S2_Interface_Auto.py  _s2InterfaceAutogen.py  telemParse.py  telem_parser.py
SerialComms/inc/: comms.h  globals.h  pack_calibration_defines.h  pack_cmd_defines.h  pack_pt_calibration.h  pack_telem_defines.h  pt_calibrations.h  serialcomms.h
SerialComms/python/: Makefile  README.md  Test.py  _s2InterfaceAutogen.py  board_addr.txt  calibration_data_flightec.csv  calibration_data_flightec_pressboard_port.csv  calibration_data_gsecontroller.csv  calibration_file_generator.py  calibration_generator.py  calibrations.csv  callibration_file_generator.py  cmd_file_generator.py  cmd_template_parser.py  file_generator_byte_info.py  flash_constants.csv  flash_constants_autogen.py  globals.c  globals.h  hotfire_packet.py  new_sim_generator.py  pack_telem_defines.c  pack_telem_defines.h  printTest.py  pt_calibration.csv  pt_calibration_generator.py  sim_generator.py  telem.c  telemParse.py  telem_cmd_template.csv  telem_data_flightcomp.csv  telem_data_flightec.csv  telem_data_flightec_pressboard_port.csv  telem_data_gsecontroller.csv  telem_data_pressboard.csv  telem_data_template.csv  telem_defines_globals_generate.py  telem_file_generator.py  telem_parser.py  test1.csv
SerialComms/python/firmware_test_cases/: README.md  test1.csv  test2.xlsx
SerialComms/src/: comms.c  globals.c  pack_calibration_defines.c  pack_cmd_defines.c  pack_pt_calibration.c  pack_telem_defines.c  s2_command.py  telem.c
ValveLibs/: README.md
W25N01GV/: README.md
(+84 files in other folders)
